@@ -97,9 +97,9 @@ private:
                 || VN_IS(nodep->dtypep()->skipRefp(), UnpackArrayDType)
                 || VN_IS(nodep->dtypep()->skipRefp(), VoidDType)) {
             } else {
-                const AstStructDType* const dtypep
-                    = VN_CAST(nodep->dtypep()->skipRefp(), StructDType);
-                if (!dtypep || dtypep->packed()) { setCppWidth(nodep); }
+                const AstNodeUOrStructDType* const dtypep
+                    = VN_CAST(nodep->dtypep()->skipRefp(), NodeUOrStructDType);
+                if (!dtypep || dtypep->packed()) setCppWidth(nodep);
             }
         }
     }
