@@ -13,6 +13,8 @@ Verilator 5.007 devel
 
 **Minor:**
 
+* Support unpacked unions.
+
 
 Verilator 5.006 2022-01-22
 ==========================
